HTML semántico en el contenido principal

--- a/index.html
+++ b/index.html
@@ -24,43 +24,61 @@
     </nav>
   </header>
 
-  <div class="intro">
+  <main>
 
-    Soy cofundador de MoonMakers una comunidad de creadores apasionados por el conocimiento. Un Makerspace, un espacio
-    abierto con diferentes máquinas de fabricación digital. Y un canal de YouTube donde promovemos la ciencia, la
-    tecnología y el movimiento maker.
+    <section>
+      <h2 class="header">Acerca de</h2>
 
-    Hemos colaborado con empresas como: Sesame Street, Make Community y en México con Televisión Educativa y Fundación
-    Televisa, creando contenido educativo.
-    Hemos imparto talleres por la República Mexicana con: Talent Land, Secretaría de educación en Jalisco, Conacyt,
-    Centro Cultural España
-    <div class="social-media">
-      <div>
-        <a href="https://twitter.com/DiegoFr60708711" target="_blank"><img src="./web/images/twitter.png" /></a>
-      </div>
-      <div>
-        <a href="https://github.com/Diego-Luna" target="_blank"><img src="./web/images/github-logo.png" /></a>
-      </div>
-      <div>
-        <a href="https://www.linkedin.com/in/diego-fco-luna-lopez-427b37162/" target="_blank"><img
-            src="./web/images/linkedin.png" /></a>
-      </div>
-    </div>
-  </div>
+      <p class="intro">
+        Soy cofundador de MoonMakers una comunidad de creadores apasionados por el conocimiento. Un Makerspace, un
+        espacio
+        abierto con diferentes máquinas de fabricación digital. Y un canal de YouTube donde promovemos la ciencia, la
+        tecnología y el movimiento maker.
 
-  <div class="carousel">
-    <div class="arrow arrow-left"></div>
-    <div class="window">
-      <div class="project-container">
-        <div class="project project1"></div>
-        <div class="project project2"></div>
-        <div class="project project3"></div>
-        <div class="project project4"></div>
-        <div class="project project5"></div>
+        Hemos colaborado con empresas como: Sesame Street, Make Community y en México con Televisión Educativa y
+        Fundación
+        Televisa, creando contenido educativo.
+        Hemos imparto talleres por la República Mexicana con: Talent Land, Secretaría de educación en Jalisco, Conacyt,
+        Centro Cultural España
+      </p>
+
+      <ul class="social-media">
+        <li>
+          <a href="https://twitter.com/DiegoFr60708711" target="_blank"><img src="./web/images/twitter.png"
+              alt="twitter" /></a>
+        </li>
+        <li>
+          <a href="https://github.com/Diego-Luna" target="_blank"><img src="./web/images/github-logo.png"
+              alt="github" /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/diego-fco-luna-lopez-427b37162/" target="_blank"><img
+              src="./web/images/linkedin.png" alt="linkedin" /></a>
+        </li>
+      </ul>
+    </section>
+
+
+    <section>
+      <h2 class="header">Mis proyectos</h2>
+
+      <div class="carousel">
+        <div class="arrow arrow-left"></div>
+        <div class="window">
+          <ul class="project-container">
+            <li> <button> <img class="project project1" src="./web/images/AI.jpg" alt="Proyecto de AI"> </button> </li>
+            <li> <button> <img class="project project2" src="./web/images/arduino.jpg" alt="Proyecto de arduino"> </button> </li>
+            <li> <button> <img class="project project3" src="./web/images/campus.jpg" alt="Proyecto de Maker campus"> </button> </li>
+            <li> <button> <img class="project project4" src="./web/images/code.jpg" alt="Code adventure"> </button> </li>
+            <li> <button> <img class="project project5" src="./web/images/maker.jpg" alt="Maker camp"> </button> </li>
+          </ul>
+        </div>
+        <div class="arrow arrow-right"></div>
       </div>
-    </div>
-    <div class="arrow arrow-right"></div>
-  </div>
+    </section>
+
+  </main>
+
 
   <div class="contact-section">
     <div class="header">Contacto</div>
