--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <h2 class="header">Mis proyectos</h2>
 
       <div class="carousel">
-        <div class="arrow arrow-left"></div>
+        <div class="arrow arrow-left" aria-label="backward button" >  </div>
         <div class="window">
           <ul class="project-container">
             <li> <button> <img class="project project1" src="./web/images/AI.jpg" alt="Proyecto de AI"> </button> </li>
@@ -73,7 +73,7 @@
             <li> <button> <img class="project project5" src="./web/images/maker.jpg" alt="Maker camp"> </button> </li>
           </ul>
         </div>
-        <div class="arrow arrow-right"></div>
+        <div class="arrow arrow-right" aria-label="forward button" ></div>
       </div>
     </section>
 
@@ -83,8 +83,8 @@
   <footer class="contact-section">
     <h2 class="header">Contacto</h2>
     <form class="form-container">
-      Nombre<input type="text" /> <br />
-      Correo<input type="text" /> <br />
+      Nombre<input type="text" aria-label="input de nombre" /> <br />
+      Correo<input type="text" aria-label="input de correo electronico" /> <br />
       <div class="message-input">Mensaje<input type="text" /> <br /></div>
       <button class="send-button">Enviar</button>
     </form>
