--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <li> <button> <img class="project project1" src="./web/images/AI.jpg" alt="Proyecto de AI"> </button> </li>
             <li> <button> <img class="project project2" src="./web/images/arduino.jpg" alt="Proyecto de arduino"> </button> </li>
             <li> <button> <img class="project project3" src="./web/images/campus.jpg" alt="Proyecto de Maker campus"> </button> </li>
-            <li> <button> <img class="project project4" src="./web/images/code.jpg" alt="Code adventure"> </button> </li>
-            <li> <button> <img class="project project5" src="./web/images/maker.jpg" alt="Maker camp"> </button> </li>
+            <li aria-hidden="true" > <button> <img class="project project4" src="./web/images/code.jpg" alt="Code adventure"> </button> </li>
+            <li aria-hidden="true" > <button> <img class="project project5" src="./web/images/maker.jpg" alt="Maker camp"> </button> </li>
           </ul>
         </div>
         <div class="arrow arrow-right" aria-label="forward button" ></div>
