--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <nav>
       <ul class="navigation">
         <li class="nav-item"><a href="/acerca-de">Acerca de</a></li>
-        <li class="nav-item"><a href="/">Mis Proyectos</a></li>
-        <li class="nav-item"><a href="/">Contacto</a></li>
+        <li class="nav-item"><a href="/proyectos">Mis Proyectos</a></li>
+        <li class="nav-item"><a href="/contacto">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -45,15 +45,15 @@
       <ul class="social-media">
         <li>
           <a href="https://twitter.com/DiegoFr60708711" target="_blank"><img src="./web/images/twitter.png"
-              alt="twitter" /></a>
+              alt="link a twitter" /></a>
         </li>
         <li>
           <a href="https://github.com/Diego-Luna" target="_blank"><img src="./web/images/github-logo.png"
-              alt="github" /></a>
+              alt="link a github" /></a>
         </li>
         <li>
           <a href="https://www.linkedin.com/in/diego-fco-luna-lopez-427b37162/" target="_blank"><img
-              src="./web/images/linkedin.png" alt="linkedin" /></a>
+              src="./web/images/linkedin.png" alt="link a linkedin" /></a>
         </li>
       </ul>
     </section>
