--- a/index.html
+++ b/index.html
@@ -45,15 +45,23 @@
       <ul class="social-media">
         <li>
           <a href="https://twitter.com/DiegoFr60708711" target="_blank"><img src="./web/images/twitter.png"
-              alt="link a twitter" /></a>
+              alt="link a twitter" />
+            <p class="social-text">twitter</p>
+          </a>
         </li>
         <li>
           <a href="https://github.com/Diego-Luna" target="_blank"><img src="./web/images/github-logo.png"
-              alt="link a github" /></a>
+              alt="link a github" />
+            <p class="social-text">github</p>
+
+          </a>
         </li>
         <li>
           <a href="https://www.linkedin.com/in/diego-fco-luna-lopez-427b37162/" target="_blank"><img
-              src="./web/images/linkedin.png" alt="link a linkedin" /></a>
+              src="./web/images/linkedin.png" alt="link a linkedin" />
+            <p class="social-text">linkedin</p>
+
+          </a>
         </li>
       </ul>
     </section>
@@ -63,17 +71,21 @@
       <h2 class="header">Mis proyectos</h2>
 
       <div class="carousel">
-        <div class="arrow arrow-left" aria-label="backward button" >  </div>
+        <div class="arrow arrow-left" aria-label="backward button"> </div>
         <div class="window">
           <ul class="project-container">
             <li> <button> <img class="project project1" src="./web/images/AI.jpg" alt="Proyecto de AI"> </button> </li>
-            <li> <button> <img class="project project2" src="./web/images/arduino.jpg" alt="Proyecto de arduino"> </button> </li>
-            <li> <button> <img class="project project3" src="./web/images/campus.jpg" alt="Proyecto de Maker campus"> </button> </li>
-            <li aria-hidden="true" > <button> <img class="project project4" src="./web/images/code.jpg" alt="Code adventure"> </button> </li>
-            <li aria-hidden="true" > <button> <img class="project project5" src="./web/images/maker.jpg" alt="Maker camp"> </button> </li>
+            <li> <button> <img class="project project2" src="./web/images/arduino.jpg" alt="Proyecto de arduino">
+              </button> </li>
+            <li> <button> <img class="project project3" src="./web/images/campus.jpg" alt="Proyecto de Maker campus">
+              </button> </li>
+            <li aria-hidden="true"> <button> <img class="project project4" src="./web/images/code.jpg"
+                  alt="Code adventure"> </button> </li>
+            <li aria-hidden="true"> <button> <img class="project project5" src="./web/images/maker.jpg"
+                  alt="Maker camp"> </button> </li>
           </ul>
         </div>
-        <div class="arrow arrow-right" aria-label="forward button" ></div>
+        <div class="arrow arrow-right" aria-label="forward button"></div>
       </div>
     </section>
 
@@ -83,9 +95,11 @@
   <footer class="contact-section">
     <h2 class="header">Contacto</h2>
     <form class="form-container">
-      Nombre<input type="text" aria-label="input de nombre" /> <br />
-      Correo<input type="text" aria-label="input de correo electronico" /> <br />
-      <div class="message-input">Mensaje<input type="text" /> <br /></div>
+      <p class="form-label">Nombre</p><input type="text" aria-label="input de nombre" /> <br />
+      <p class="form-label">Correo</p><input type="text" aria-label="input de correo electronico" /> <br />
+      <div class="message-input">
+        <p class="form-label">Mensaje</p><input type="text" /> <br />
+      </div>
       <button class="send-button">Enviar</button>
     </form>
   </footer>
