--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+  <a href="#main" class="skip-link" > Saltar al contenido</a>
+
   <header>
     <img src="./web/images/DiegoRetrato.jpg" alt="Diego Francisco Luna" class="header-img" />
     <h1 class="header">Diego Francisco Luna</h1>
@@ -24,7 +26,7 @@
     </nav>
   </header>
 
-  <main>
+  <main id="main">
 
     <section>
       <h2 class="header">Acerca de</h2>
