Manejando el foco del teclado - el carousel

--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
       <h2 class="header">Mis proyectos</h2>
 
       <div class="carousel">
-        <div class="arrow arrow-left" aria-label="backward button"> </div>
+        <button class="arrow arrow-left" aria-label="backward button"> </button>
         <div class="window">
           <ul class="project-container">
-            <li> <button> <img class="project project1" src="./web/images/AI.jpg" alt="Proyecto de AI"> </button> </li>
-            <li> <button> <img class="project project2" src="./web/images/arduino.jpg" alt="Proyecto de arduino">
+            <li> <button class="project1" > <img class="project" src="./web/images/AI.jpg" alt="Proyecto de AI"> </button> </li>
+            <li> <button class="project2" > <img class="project" src="./web/images/arduino.jpg" alt="Proyecto de arduino">
               </button> </li>
-            <li> <button> <img class="project project3" src="./web/images/campus.jpg" alt="Proyecto de Maker campus">
+            <li> <button class="project3" > <img class="project" src="./web/images/campus.jpg" alt="Proyecto de Maker campus">
               </button> </li>
-            <li aria-hidden="true"> <button> <img class="project project4" src="./web/images/code.jpg"
+            <li aria-hidden="true"> <button class="project4" tabindex="-1" > <img class="project" src="./web/images/code.jpg"
                   alt="Code adventure"> </button> </li>
-            <li aria-hidden="true"> <button> <img class="project project5" src="./web/images/maker.jpg"
+            <li aria-hidden="true"> <button class="project5" tabindex="-1"  > <img class="project" src="./web/images/maker.jpg"
                   alt="Maker camp"> </button> </li>
           </ul>
         </div>
-        <div class="arrow arrow-right" aria-label="forward button"></div>
+        <button class="arrow arrow-right" aria-label="forward button"></button>
       </div>
     </section>
 
