Coordinando el foco del teclado con el foco de lectores de pantallas

--- a/index.html
+++ b/index.html
@@ -76,15 +76,18 @@
         <button class="arrow arrow-left" aria-label="backward button"> </button>
         <div class="window">
           <ul class="project-container">
-            <li> <button class="project1" > <img class="project" src="./web/images/AI.jpg" alt="Proyecto de AI"> </button> </li>
-            <li> <button class="project2" > <img class="project" src="./web/images/arduino.jpg" alt="Proyecto de arduino">
+            <li class="project1-container"> <button class="project1"> <img class="project" src="./web/images/AI.jpg"
+                  alt="Proyecto de AI"> </button> </li>
+            <li class="project2-container"> <button class="project2"> <img class="project"
+                  src="./web/images/arduino.jpg" alt="Proyecto de arduino">
               </button> </li>
-            <li> <button class="project3" > <img class="project" src="./web/images/campus.jpg" alt="Proyecto de Maker campus">
+            <li class="project3-container"> <button class="project3"> <img class="project" src="./web/images/campus.jpg"
+                  alt="Proyecto de Maker campus">
               </button> </li>
-            <li aria-hidden="true"> <button class="project4" tabindex="-1" > <img class="project" src="./web/images/code.jpg"
-                  alt="Code adventure"> </button> </li>
-            <li aria-hidden="true"> <button class="project5" tabindex="-1"  > <img class="project" src="./web/images/maker.jpg"
-                  alt="Maker camp"> </button> </li>
+            <li class="project4-container" aria-hidden="true"> <button class="project4" tabindex="-1"> <img
+                  class="project" src="./web/images/code.jpg" alt="Code adventure"> </button> </li>
+            <li class="project5-container" aria-hidden="true"> <button class="project5" tabindex="-1"> <img
+                  class="project" src="./web/images/maker.jpg" alt="Maker camp"> </button> </li>
           </ul>
         </div>
         <button class="arrow arrow-right" aria-label="forward button"></button>
