--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="notification">El formulario fue enviado sin errores</div>
   <div class="modal-container">
     <div class="modal">
-      <h2 class="header"> Ejemplo de un proyecto mio </h2>
+      <h2 class="header" id="modal-header" tabindex="0"> Ejemplo de un proyecto mio </h2>
       <img id="img-modal" src="./web/images/AI.jpg" class="modal-project-image" alt="una photo de mi proyecto"/>
       <button class="modal-button" >Cerrar</button>
     </div>
