--- a/index.html
+++ b/index.html
@@ -99,11 +99,15 @@
 
   <footer class="contact-section">
     <h2 class="header">Contacto</h2>
+    <p class="intro-header"> Puedes usar el formulario para mandar me un correo </p>
+
     <form class="form-container">
-      <p class="form-label">Nombre</p><input type="text" aria-label="input de nombre" /> <br />
-      <p class="form-label">Correo</p><input type="text" aria-label="input de correo electronico" /> <br />
+      <label class="form-label">Nombre</label><input id="name" type="text" aria-label="input de nombre" />
+      <span id="name-error" ></span>
+      <br />
+      <label class="form-label">Correo</label><input required type="text" aria-label="input de correo electronico" /> <br />
       <div class="message-input">
-        <p class="form-label">Mensaje</p><input type="text" /> <br />
+        <label class="form-label">Mensaje</label><input required type="text" /> <br />
       </div>
       <button class="send-button">Enviar</button>
     </form>
@@ -113,8 +117,8 @@
   <div class="modal-container">
     <div class="modal">
       <h2 class="header" id="modal-header" tabindex="0"> Ejemplo de un proyecto mio </h2>
-      <img id="img-modal" src="./web/images/AI.jpg" class="modal-project-image" alt="una photo de mi proyecto"/>
-      <button class="modal-button" >Cerrar</button>
+      <img id="img-modal" src="./web/images/AI.jpg" class="modal-project-image" alt="una photo de mi proyecto" />
+      <button class="modal-button">Cerrar</button>
     </div>
   </div>
 
