--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <form class="form-container">
       <label class="form-label">Nombre</label><input id="name" type="text" aria-label="input de nombre" />
-      <span id="name-error" ></span>
+      <span id="name-error" aria-live="assertive" ></span>
       <br />
       <label class="form-label">Correo</label><input required type="text" aria-label="input de correo electronico" /> <br />
       <div class="message-input">
@@ -113,7 +113,7 @@
     </form>
   </footer>
 
-  <div class="notification">El formulario fue enviado sin errores</div>
+  <div class="notification" aria-live="assertive" ></div>
   <div class="modal-container">
     <div class="modal">
       <h2 class="header" id="modal-header" tabindex="0"> Ejemplo de un proyecto mio </h2>
